force-app/main/default/objects/StudentSubjectChoices__c/fields/Choice_name__c.field-meta.xml
<CustomField>
    <fullName>Choice_name__c</fullName>
    <displayFormat>C-{0000}</displayFormat>
    <label>Choice name</label>
    <type>AutoNumber</type>
</CustomField>