force-app/main/default/objects/StudentSubjectChoices__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Studenten__c</referenceTo>
    <relationshipLabel>StudentSubjectChoices</relationshipLabel>
    <relationshipName>StudentSubjectChoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>