force-app/main/default/objects/StudentSubjectChoices__c/fields/subjects__c.field-meta.xml
<CustomField>
    <fullName>subjects__c</fullName>
    <label>subject</label>
    <referenceTo>subject__c</referenceTo>
    <relationshipLabel>StudentSubjectChoices</relationshipLabel>
    <relationshipName>StudentSubjectChoices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>